[package]
name = "waflz"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[dependencies]
irc = "0.13"
regex = "1.0"
reqwest = { version="0.10.4", features=["blocking"] }
anyhow = "1.0.26"
kuchiki = "0.7"
env_logger = "0.6"
log = "0.4"
humansize = "1.1.0"
maxminddb = "0.13.0"
toml = "0.5.6"
serde = "1"
serde_derive = "1"
