[package]
name = "waflz"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
env_logger = "0.10"
futures = "0.3.29"
humansize = "2"
irc = "0.15"
kuchiki = "0.8"
log = "0.4"
maxminddb = "0.23"
regex = "1.0"
reqwest = "0.11"
serde = "1"
serde_derive = "1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
